creusot/tests/should_fail/cycle.stderr
warning: unused import: `creusot_contracts::*`
 --> cycle.rs:2:5
  |
2 | use creusot_contracts::*;
  |     ^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error: Mutually recursive functions: when calling f...
  --> cycle.rs:4:1
   |
4  | pub fn f() {
   | ^^^^^^^^^^
   |
note: then f calls g...
  --> cycle.rs:5:5
   |
5  |     g(true);
   |     ^^^^^^^
note: finally g calls f.
  --> cycle.rs:10:9
   |
10 |         f();
   |         ^^^

error: aborting due to 1 previous error; 1 warning emitted

